[package]
name = "lva-camo-status"
version = "0.0.0"
edition = "2024"

[dependencies]
chrono = "=0.4.43"
clap = { version = "=4.5.57", features = ["derive"] }
minijinja = "=2.14.0"
scraper = "=0.25.0"
serde = { version = "=1.0.228", features = ["derive"] }
thiserror = "=2.0.18"
toml = "=0.9.11"
ureq = "=3.1.4"

[dev-dependencies]
insta = "=1.46.3"
