[package]
name = "lva-camo-status"
version = "0.0.0"
edition = "2024"

[dependencies]
chrono = "=0.4.45"
clap = { version = "=4.6.2", features = ["derive"] }
minijinja = "=2.21.0"
scraper = "=0.27.0"
serde = { version = "=1.0.229", features = ["derive"] }
thiserror = "=2.0.19"
toml = "=1.1.3"
ureq = "=3.3.0"

[dev-dependencies]
insta = "=1.48.0"
